@@ -221,16 +221,12 @@ cd ..
 rem   ----------------------------------------------------------------------
 Echo Configuring the library source directory...
 cd lib-src
-rem   Create "makefile" from "makefile.in".
-sed -e "1,/== start of cpp stuff ==/s@^##*[ 	].*$@@" <Makefile.in >junk.c
-gcc -E -traditional -I. -I../src junk.c | sed -e "s/^ /	/" -e "/^#/d" -e "/^[ 	]*$/d" >makefile.new
 If "%DJGPP_VER%" == "2" goto libsrc-v2
-sed -f ../msdos/sed3.inp <makefile.new >Makefile
+sed -f ../msdos/sed3.inp <Makefile.in >Makefile
 Goto libsrc2
 :libsrc-v2
-sed -f ../msdos/sed3v2.inp <makefile.new >Makefile
+sed -f ../msdos/sed3v2.inp <Makefile.in >Makefile
 :libsrc2
-rm -f makefile.new junk.c
 if "%X11%" == "" goto libsrc2a
 mv Makefile makefile.tmp
 sed -f ../msdos/sed3x.inp <makefile.tmp >Makefile
